# MetaAgent

./: .gitignore  README.md  pyproject.toml
scripts/: check_outreach_status.sh  com.meta-agent.linkedin-outreach.plist  install_outreach.sh  uninstall_outreach.sh
src/meta_agent/: __init__.py  __main__.py  agent_manager.py  agent_runner.py  brain.py  chat_ui.py  cli.py  config.py  db.py  external_runner.py  mcp_server.py  models.py
src/meta_agent/agent_configs/: examples.py
src/meta_agent/dashboard/: app.py  routes.py
src/meta_agent/dashboard/templates/: index.html  kanban.html  kanban_enhanced.html
src/meta_agent/linkedin_outreach/: __init__.py  config.py  outreach_engine.py  permission_prompt.py  wake_detector.py
tests/: conftest.py  test_agent_manager.py  test_agent_runner.py  test_brain.py  test_db.py  test_external_runner.py  test_mcp_server.py  test_models.py
