[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meta-agent"
version = "0.1.0"
description = "Meta-agent system orchestrating multiple Claude-powered agents"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.30",
    "click>=8.1",
    "flask>=3.0",
    "pydantic>=2.0",
    "mcp>=1.2.0",
    "rich>=13.0",
]

[project.scripts]
meta-agent = "meta_agent.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
external = ["httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/meta_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
